script: invertedOrNot function created This function was created to check id of button and return it's text content.

--- a/pyramid-generator/assets/styles/styles.css
+++ b/pyramid-generator/assets/styles/styles.css
@@ -12,4 +12,14 @@ html {
 
 body {
   height: 100%;
+  background-color: #F2C1AE;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
