feat: build new functions In this commit I builded functions to return make the rows array and print result in the HTML.

--- a/pyramid-generator/assets/styles/styles.css
+++ b/pyramid-generator/assets/styles/styles.css
@@ -20,6 +20,13 @@ body {
 
 .container{
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
+  border: 1px solid #000;
+  padding: 2rem;
+  width: 50%;
+  height: 50%;
+  background-color: #F0F8FF;
 }
+
