--- a/pyramid-generator/assets/styles/styles.css
+++ b/pyramid-generator/assets/styles/styles.css
@@ -23,10 +23,27 @@ body {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  border: 1px solid #000;
   padding: 2rem;
-  width: 50%;
+  width: 40rem;
   height: 50%;
   background-color: #F0F8FF;
 }
 
+p {
+  font-size: 2rem;
+  text-wrap: wrap;
+}
+
+.container__buttons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  width: 100%;
+  gap: 1rem;
+}
+
+button {
+  width: 50%;
+  height: 4rem;
+}
