feat: fix displacement of characters Whit Gemini Assistence I could fix displacement bug that push the characters. I Used the <pre> to preserve whitespaces in HTML rendering.

--- a/pyramid-generator/assets/styles/styles.css
+++ b/pyramid-generator/assets/styles/styles.css
@@ -30,8 +30,13 @@ body {
 }
 
 p {
+  width: 36rem;
+  height: 20rem;
   font-size: 2rem;
-  text-wrap: wrap;
+}
+
+p pre {
+  text-align: center;
 }
 
 .container__buttons {
