--- a/role-play-game/assets/styles/styles.css
+++ b/role-play-game/assets/styles/styles.css
@@ -29,7 +29,7 @@ body {
 #game {
   max-width: 500px;
   max-height: 400px;
-  background-color: #ffffff;
+  background-color: #f2f2f2;
   color: #ffffff;
   /* margin: 30px auto 0px; */
   padding: 10px;
