--- a/role-play-game/assets/styles/styles.css
+++ b/role-play-game/assets/styles/styles.css
@@ -17,7 +17,8 @@ body {
 body {
   background-color: #0a0a23;
   display: flex;
-  /* flex-direction: column; */
+  justify-content: center;
+  align-items: center;
 }
 
 #text {
@@ -27,14 +28,14 @@ body {
 }
 
 #game {
-  max-width: 500px;
-  max-height: 400px;
+  height: 20rem;
+  width: 50rem;
   background-color: #f2f2f2;
   color: #ffffff;
-  /* margin: 30px auto 0px; */
   padding: 10px;
   align-items: center;
   justify-content: center;
+  font-size: 1.5em;
 }
 
 #controls,
