--- a/role-play-game/assets/styles/styles.css
+++ b/role-play-game/assets/styles/styles.css
@@ -36,6 +36,7 @@ body {
   align-items: center;
   justify-content: center;
   font-size: 1.5em;
+  border-radius: 1rem;
 }
 
 #controls,
@@ -63,4 +64,11 @@ button {
   background-color: #feac32;
   background-image: linear-gradient(#fecc4c, #ffac33);
   border: 3px solid #feac32;
+}
+
+#stats,
+#controls,
+#text {
+  margin-bottom: .5rem;
+  box-shadow: 0 0 .4rem rgba(0, 0, 0, 0.5);
 }
